--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/generateANR" 
-        android:onClick="generateAnr"/>
+        android:text="@string/generateCrash" 
+        android:onClick="generateCrash"/>
 
 </RelativeLayout>
